Test-cases/Errors/C20.xyz
20
Coordinates from ORCA-job C20
  C   -0.96040600183685     -0.57835619179662      1.66236875781227
  C   -2.15707470949328     -1.40131950048611      1.57931811443028
  C   -3.30848904660643      1.40348216217969      0.38058376035796
  C   -3.32775774004610     -0.55044059766876      1.57951563487343
  C   -1.01658856174858      1.39993495174048      0.36059330118247
  C   -2.91553447468021      0.84297264999211      1.66348013413967
  C   -0.30440812474640     -0.77936965955272      0.38001411321099
  C   -1.46434757889467      0.78427848905083      1.59071830726312
  C   -2.16847846382260     -2.24274361670658      0.39237188219108
  C   -4.12375036742089     -0.82129870901776      0.39306583211278
  C   -2.16818789847454      1.87102688810248     -0.39237174849643
  C   -0.21291391874041      0.44958275845107     -0.39306647524823
  C   -1.02817611232585     -1.77519807242617     -0.38058367705879
  C   -3.32007704328533     -1.77165055573675     -0.36059325010277
  C   -4.03225872501384      0.40765440853125     -0.38001434418866
  C   -2.17959237044972      1.02960287336146     -1.57931998491743
  C   -1.00890792213053      0.17872510460598     -1.57951582088805
  C   -1.42113275325380     -1.21468788850060     -1.66347810815514
  C   -2.87231919541906     -1.15599522661787     -1.59071798412511
  C   -3.37625899161090      0.20663973249460     -1.66236844439343
